--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>React App</title>
+        <style>
+            .hello {
+                color: red;
+            }
+        </style>
     </head>
     <body>
         <div id="root"></div>
