--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html>
     <head>
         <title>React App</title>
-        <style>
-            .hello {
-                color: red;
-            }
-        </style>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div id="root"></div>
