--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>React App</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Load React. -->
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 </head>
 <body>
     <div id="root"></div>
-    <script src="react.js"></script>
+    <!-- <script src="react.js"></script> -->
     <script src="app.js"></script>
 </body>
 </html>
