--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   <body>
     <div id="root"></div>
     <!-- <script src="react.js"></script> -->
-    <script src="app.js"></script>
+    <script src="dist/bundle.js"></script>
   </body>
 </html>
